--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -11,7 +11,7 @@ FROM ubuntu:17.04
 # Install Java.
 RUN \                                             
   echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
-  && apt-get update && apt-get upgrage \
+  && apt-get update && apt-get upgrade \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-utils software-properties-common python-software-properties \
   && add-apt-repository ppa:webupd8team/java -y \
   && apt-get update \
