--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -9,9 +9,10 @@
 FROM ubuntu:16.04
 
 # Install Java.
-RUN \                                             
+RUN \
   echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
-  && apt-get update && apt-get upgrade \
+  && apt-get update \
+  && apt-get upgrade \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-utils software-properties-common python-software-properties \
   && add-apt-repository ppa:webupd8team/java -y \
   && apt-get update \
@@ -19,7 +20,6 @@ RUN \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java8-set-default \
   && rm -rf /var/lib/apt/lists/* \
   && rm -rf /var/cache/oracle-jdk8-installer
-
 
 # Define working directory.
 WORKDIR /data
