--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -11,8 +11,8 @@ FROM ubuntu:16.04
 # Install Java.
 RUN \
   echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
-  && apt-get update \
-  && apt-get upgrade \
+  && apt-get update  \
+  && apt-get upgrade -y \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-utils software-properties-common python-software-properties \
   && add-apt-repository ppa:webupd8team/java -y \
   && apt-get update \
