--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -14,7 +14,7 @@ RUN \
   echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
   && apt-get update  \
   && apt-get upgrade -y \
-  && apt-get install mc nano -y \
+  && apt-get install mc nano inetutils-ping -y \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y apt-utils software-properties-common python-software-properties \
   && add-apt-repository ppa:webupd8team/java -y \
   && apt-get update \
